[gd_scene load_steps=8 format=2]

[ext_resource path="res://Tilesheets/colored_transparent.png" type="Texture" id=1]
[ext_resource path="res://Merchant/DialoguePanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://NPC's/FallenAdventurer.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 50.0

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="FallenAdventurer" type="KinematicBody2D"]
modulate = Color( 1, 1, 1, 0 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.498039 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 461, 18, 12, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractRange" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractRange"]
visible = false
shape = SubResource( 2 )

[node name="DialoguePanel" parent="." instance=ExtResource( 2 )]
visible = false
margin_top = -60.0
margin_bottom = 0.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/appear = SubResource( 3 )
anims/disappear = SubResource( 4 )
[connection signal="body_entered" from="InteractRange" to="." method="_on_InteractRange_body_entered"]
[connection signal="body_exited" from="InteractRange" to="." method="_on_InteractRange_body_exited"]
